Project page fixes and start on NUScript page
Logo for NUscript, new component for displaying image with text, with animations
Some small style changes to the project component

--- a/src/styles/components/about.module.scss
+++ b/src/styles/components/about.module.scss
@@ -19,4 +19,10 @@
     font-size: x-large;
 }
 
+@media only scrren and (max-width: 600px){
+    .aboutContainer{
+        width: $mobileWidth;
+    }
+}
+
 
