Started work on responsive mobile support
Added media query's for a number of pages of the website, encountered an issue
with the Project NuScript page, the images are not fitting well on the mobile view,
needs to be addressed further

--- a/src/styles/components/navbar.module.scss
+++ b/src/styles/components/navbar.module.scss
@@ -12,7 +12,7 @@
     font-weight: 500;
 }
 
-.nav div{
+.nav {
     padding: 5px;
 
 }
@@ -28,4 +28,14 @@
 .nav a{
     text-decoration: none;
     color: inherit;
+}
+
+@media (max-width: 500px) {
+    .nav a{
+        display: none;
+    }
+
+    .nav{
+        display: inline-block;
+    }
 }
