--- a/src/styles/components/infobox.module.scss
+++ b/src/styles/components/infobox.module.scss
@@ -37,3 +37,9 @@
     padding-left: 10px;
     background-color: transparent;
 }
+@media only screen and (max-width: 600px){
+    .info {
+        width: 60vw;
+        margin-left: 0;
+    }
+}
