--- a/src/styles/components/project.module.scss
+++ b/src/styles/components/project.module.scss
@@ -34,3 +34,10 @@
     background-color: transparent;
     color: black;
 }
+
+
+@media only screen and (max-width: 600px){
+    .project{
+        width: 85vw;
+    }
+}
