--- a/src/styles/components/scrn.module.scss
+++ b/src/styles/components/scrn.module.scss
@@ -45,3 +45,19 @@
     from {right: -100px}
     to {right: 0px}
 }
+
+@media only screen and (max-width: 600px){
+    .imgBox{
+        width: 100vw;
+
+    }
+
+    .imgBox img{
+        width: 100vw;
+    }
+
+    .textBoxes p {
+        width: 40vw;   
+    }
+
+}
