--- a/src/styles/containers/App.module.scss
+++ b/src/styles/containers/App.module.scss
@@ -33,3 +33,14 @@
 
 
 }
+
+@media only screen and (max-width: 600px){
+  .App-header{
+    min-height: auto;
+  }
+
+  .App{
+    min-width: 100vw;
+  }
+
+}
