--- a/src/styles/vars/containervars.scss
+++ b/src/styles/vars/containervars.scss
@@ -5,3 +5,9 @@ $mobileWidth: 40%;
 $containerWidths: 80%;
 $containerMargins: auto;
 $containerBColor: #f6faee;
+
+$backdrop-height: 100%;
+$backdrop-width: 100%;
+$backdrop-z-index: 100;
+$backdrop-left: 0;
+$backdrop-top: 0;
