Some nav styling fixes + about section updates
NUScript project page becoming more fleshed out

--- a/src/styles/components/navbar.module.scss
+++ b/src/styles/components/navbar.module.scss
@@ -2,7 +2,7 @@
 .nav{
     display: flex;
     justify-content: space-evenly;
-    width: 100%;
+    width: auto;
     background-color: #5CDB96;
     color: #05386b;
     height: 3em;
@@ -37,5 +37,6 @@
 
     .nav{
         display: inline-block;
+        width: 100%;
     }
 }
