NUScript page almost done, adjustments for mobile
Most of the information for the NUScript page is now up,
set up routing and project thumbnail for website page, started entering information

--- a/src/styles/containers/nuscript.module.scss
+++ b/src/styles/containers/nuscript.module.scss
@@ -3,6 +3,8 @@
 .container {
     background-color: lightcyan;
     margin-top: -48px;
+    //padding-left: 5%; //kind of magic number, maybe fix 
+
 }
 
 .container h3{
@@ -15,3 +17,10 @@
     font-size: 20px;
 }
 
+
+//If fix magic number this can be removed
+@media only screen and (max-width: 600px){
+    .container {
+        padding-left: 0;
+    }
+}
