--- a/src/styles/containers/website.module.scss
+++ b/src/styles/containers/website.module.scss
@@ -6,3 +6,18 @@
     text-align: justify;
     justify-content: left;
 }
+
+.container p{
+    text-align: justify;
+    justify-content: left; 
+}
+
+.container a {
+    text-decoration: none;
+    font-size: 1.5em;
+}
+
+.container a:hover{
+    color: green;
+    -webkit-transition: color 1s;
+}
