Work on Burger Builder Project Page
Demo of the app now available, greater description included
Bulked out the contacts and socials page

--- a/src/styles/components/infobox.module.scss
+++ b/src/styles/components/infobox.module.scss
@@ -5,8 +5,9 @@
     padding: 20px;
     border-radius: 5px;
     width: 80%;
-    background-color: #5CDB95;
-    color: #EDF5E1;
+    font-size: large;
+    background-color: #29C26E;
+    color: #f6f4f4;
 }
 
 .info_outline{
@@ -16,7 +17,8 @@
     border-radius: 5px;
     width: 80%;
     border: 4px solid #5CDB95;
-    color: #5CDB95;
+    color: #1D874C;
+    background-color: #fffffffb;
 }
 
 .info_noborder{
