Added tomlk page, styling fixes on NUscript page

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 body {
   margin: 0;
   font-family: 'Open Sans', sans-serif;
-  background-color: #EDF5E1;
+  background: linear-gradient(180deg, rgba(213,240,193,1) 39%, rgba(161,224,237,1) 100%);
+
 }
 
 code {
