--- a/src/styles/vars/containervars.scss
+++ b/src/styles/vars/containervars.scss
@@ -5,6 +5,7 @@ $mobileWidth: 40%;
 $containerWidths: 80%;
 $containerMargins: auto;
 $containerBColor: #f6faee;
+//$containerBColor: linear-gradient(90deg, rgba(191,231,163,1) 54%, rgba(93,169,185,1) 100%);
 
 $backdrop-height: 100%;
 $backdrop-width: 100%;
