--- a/src/styles/containers/App.module.scss
+++ b/src/styles/containers/App.module.scss
@@ -2,6 +2,7 @@
   text-align: center;
   background-color: #f6faee;
 
+
   width: 80%;
   margin: auto;
   height: fit-content;
@@ -40,7 +41,7 @@
   }
 
   .App{
-    min-width: 100vw;
+    min-width: 500px;
   }
 
 }
