--- a/src/styles/containers/contact.module.scss
+++ b/src/styles/containers/contact.module.scss
@@ -3,13 +3,29 @@
 .container h3{
     font-size: x-large;
     font-weight: 400;
+    color: #28806D;
 }
 
 .container a{
     text-decoration: none;
     font-size: x-large;
-    
+    display: block;
+    padding-bottom: 3vh;
+}
 
+.container{
+    padding-bottom: 50vh;
+    text-align: left;
+    padding-left: 6vw;
+}
+
+.container hr {
+    width: 65vw;
+    float: left;
+    margin-right: 30vw;
+    border: 0;
+    height: 2px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(110, 216, 91, 0.75), rgba(141, 243, 189, 0));    
 }
 
 .container a:hover{
