--- a/src/styles/components/navbar.module.scss
+++ b/src/styles/components/navbar.module.scss
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-evenly;
     width: auto;
-    background-color: #5CDB96;
+    background-color: #a0c2a4;
     color: #05386b;
     height: 3em;
     margin-bottom: 3rem;
