--- a/src/styles/components/about.module.scss
+++ b/src/styles/components/about.module.scss
@@ -9,7 +9,7 @@
 }
 
 .aboutContainer h3, h2{
-    color: #28806D;
+    color: #596475;
     padding-left: 10px;
     font-weight: 300;
     font-size: xx-large;
