--- a/src/styles/containers/nuscript.module.scss
+++ b/src/styles/containers/nuscript.module.scss
@@ -1,10 +1,9 @@
 
 
 .container {
-    background-color: lightcyan;
+    background-color: #3c4446;
     margin-top: -48px;
     min-width: 500px;
-    //padding-left: 5%; //kind of magic number, maybe fix 
 
 }
 
@@ -12,6 +11,7 @@
     font-size: xx-large;
     font-weight: 400;
     padding: 20px;
+    color: honeydew;
 }
 
 .container p{
