--- a/src/styles/containers/skills.module.scss
+++ b/src/styles/containers/skills.module.scss
@@ -7,3 +7,10 @@
     background-color:  $containerBColor;
     text-align: left;
 }
+
+h2{
+    color: honeydew;
+    padding-left: 0px;
+    font-weight: 300;
+    font-size: xx-large;
+}
