--- a/src/styles/components/project.module.scss
+++ b/src/styles/components/project.module.scss
@@ -4,11 +4,13 @@
     display: inline-flex;
     width: 400px;
     height: 300px;
-    border: 2px solid black;
+    border: 2px solid #85e2a9;
     border-radius: 20px;
     margin: 30px;
     
 }
+
+
 
 .frontdrop{
     width: 100%;
@@ -32,7 +34,7 @@
     width: inherit;
     height: inherit;
     background-color: transparent;
-    color: black;
+    color: honeydew;
 }
 
 
