--- a/src/styles/containers/burger.module.scss
+++ b/src/styles/containers/burger.module.scss
@@ -1,11 +1,23 @@
 
-.container h3{
+.container{
+    background-color: #3c4446;
+    margin-top: -48px;
+}
+
+.container h1{
     font-size: xx-large;
     font-weight: 400;
+    padding: 20px;
+    color: honeydew;
+}
+
+.container h2{
+    font-size: x-large;
 }
 
 .container p{
     text-align: left;
+    color:whitesmoke;
 }
 
 @media (max-width: 600px){
