--- a/src/styles/vars/containervars.scss
+++ b/src/styles/vars/containervars.scss
@@ -6,6 +6,8 @@ $containerWidths: 80%;
 $containerMargins: auto;
 $containerBColor: none;
 //$containerBColor: linear-gradient(90deg, rgba(191,231,163,1) 54%, rgba(93,169,185,1) 100%);
+$titleGreenHue: #08fd9fc7;
+
 
 $backdrop-height: 100%;
 $backdrop-width: 100%;
