--- a/src/styles/containers/contact.module.scss
+++ b/src/styles/containers/contact.module.scss
@@ -12,6 +12,7 @@
     color: whitesmoke;
     display: block;
     padding-bottom: 3vh;
+    width: fit-content;
 }
 
 .container{
@@ -37,6 +38,4 @@
     color: red;
     -webkit-transition: color 0.5s;
 }
-
-
 
