--- a/src/styles/components/infobox.module.scss
+++ b/src/styles/components/infobox.module.scss
@@ -92,8 +92,9 @@
     background-color: transparent;
 }
 @media only screen and (max-width: 600px){
-    .info {
-        width: 60vw;
-        margin-left: 0;
+    .info, .info_tech {
+        width: 95%;
+        margin: auto;
     }
+
 }
