--- a/src/styles/components/menu.module.scss
+++ b/src/styles/components/menu.module.scss
@@ -1,7 +1,5 @@
 
 
-
-
 .menu {
     width: 40px;
     height: 100%;
@@ -9,10 +7,11 @@
     flex-flow: column;
     justify-content: space-around;
     align-items: center;
-    padding: 10px 0;
     padding-left: 10px;
+    padding-top: 15px;
     box-sizing: border-box;
     cursor: pointer;
+
 }
 
 .menu div {
@@ -21,7 +20,7 @@
     background-color: white;
 }
 
-@media (min-width: 500px) {
+@media (min-width: 600px) {
     .menu {
         display: none;
     }
