--- a/src/styles/containers/project_base.module.scss
+++ b/src/styles/containers/project_base.module.scss
@@ -21,3 +21,9 @@
     color: red;
     transition: 1s ease-in-out;
 }
+
+@media only screen and (max-width: 600px){
+    .base_container{
+        margin-top: -30px;
+    }
+}
